Calendar Module 7.x
==================

===================
Version 7.x-3.x-dev
===================

NOTES:
The links at the top of the calendar page have been reworked into tabs. They will not show up
until you clear the caches. Use hook_calendar_links_alter() to alter the links or the titles
or to empty the links array if you don't want to see them.

- Issue #1260380, Some items showing up in wrong time periods because wrong value is used to create the start date bucket.
- Issue #1292148, Make scrolling in day and week view optional.
- Issue #462748, Make sure calendar links can be deleted as well as created.
- Issue #1301734 by Danny_Joris, Do not show any links to disabled displays.
- Issue #1383782 by googletorp, Check if module_exists('taxonomy') before creating taxonomy strip options.
- Issue #1235344 by kenianbei, Make sure items don't overlap if they start and end on the same times.
- Issue #1323280 by mshepherd, Remove time from time headers.
- Issue #1322376 by mshepherd, Remove space between hour and am/pm in day and week views.
- Issue #1230500, The calendar row logic was failing if there was more than one date field in a node due to a bad return value. Also fixed some errors caused by not returning an empty array for missing values.
- Issue #1236610, Allow the calendar style to work with any row plugin that extends the calendar_row_plugin.
- Issue #1265590, The calendar tabs were not showing up for everyone.
- Issue #1312792, Rework language handling for the calendar row plugin.
- Issue #1315328, Default calendar had date arguments in the master, which affected the upcoming view.
- Issue #1268780 by drewkeller, $part_path in calendar_preprocess_date_views_pager() seems to be incorrect when base_path() is '/'
- Issue #1235180 by marleythedog, Fix broken taxonomy stripe handling in calendar row plugin.
- Issue #704068, Add OG stripe option to calendar row plugin.
- Issue #1265590, Fix syntax error in calendar-style-ical.tpl.php.