@@ -10,6 +10,7 @@ The links at the top of the calendar page have been reworked into tabs. They wil
 until you clear the caches. Use hook_calendar_links_alter() to alter the links or the titles
 or to empty the links array if you don't want to see them.
 
+- Issue #1259992 by jlyon, slerby, and KarenS, The maximum items processing was not working right.
 - Issue #1260380, Some items showing up in wrong time periods because wrong value is used to create the start date bucket.
 - Issue #1292148, Make scrolling in day and week view optional.
 - Issue #462748, Make sure calendar links can be deleted as well as created.
